force-app/main/default/objects/Related_Cases__c/Related_Cases__c.object-meta.xml
<CustomObject>
    <description>Used by JEU to relate several DIR_Case__c records to each other. Distinct from the &quot;Related BOFE Case&quot; and &quot;Related Case&quot; fields on the CM object.</description>
    <label>Related Cases</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Related Cases Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>