force-app/main/default/objects/Related_Cases__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <inlineHelpText>Looks up to the Case that is related to another</inlineHelpText>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>JEU Related Cases</relationshipLabel>
    <relationshipName>JEU_Related_Cases_Originating</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>