force-app/main/default/objects/Related_Cases__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case to which initial Case is related</description>
    <inlineHelpText>Case to which initial Case is related</inlineHelpText>
    <label>Related Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>JEU Related Cases-Terminating</relationshipLabel>
    <relationshipName>JEU_Related_Cases_Terminating</relationshipName>
    <type>Lookup</type>
</CustomField>