force-app/main/default/objects/Related_Cases__c/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <inlineHelpText>Type of relation of the terminating Case to this Case</inlineHelpText>
    <label>Relation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOFE Case</fullName>
                <default>true</default>
                <label>BOFE Case</label>
            </value>
            <value>
                <fullName>WCA Case</fullName>
            </value>
            <value>
                <fullName>Same Judgment</fullName>
            </value>
            <value>
                <fullName>RCI Case</fullName>
            </value>
            <value>
                <fullName>JEU Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>